--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       </div>     
       </div>
       <div id="map"></div>
-      <script async src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.1/knockout-min.js"></script>
-      <script async src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
+      <script  src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.1/knockout-min.js"></script>
+      <script  src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
       <script  src = "js/model-min.js"></script>
       <script  src="js/view-min.js"></script>
       <script  src="js/viewmodel-min.js"></script>
