--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       <div id="map"></div>
       <script  src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.1/knockout-min.js"></script>
       <script  src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
-      <script  src = "js/model-min.js"></script>
-      <script  src="js/view-min.js"></script>
-      <script  src="js/viewmodel-min.js"></script>
-      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAV_Ag7CRe2Q2Wk6RcQAz4gbhJN8uncwHA&libraries=geometry,drawing&callback=viewModel.initialize" async defer>   </script>
+      <script  src = "js/model.js"></script>
+      <script  src="js/view.js"></script>
+      <script  src="js/viewmodel.js"></script>
+      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAV_Ag7CRe2Q2Wk6RcQAz4gbhJN8uncwHA&libraries=geometry,drawing&callback=viewModel.initialize" async defer onerror = "error()"></script>
    </body>
    <html>
